# QtNetDiscovery

./: CMakeLists.txt  README.md
lib/QtZeroConf/: .qmake.stash  CMakeLists.txt
src/discovery/: CMakeLists.txt  main.cpp  window.cpp
src/publisher/: CMakeLists.txt  window.cpp
